# ray-tracing-gpu

./: CMakeLists.txt  README.md  compile-shader.bat
shaders/: shader.comp
src/: main.cpp  render_pass_data.h  scene.cpp  scene.h  vulkan.cpp  vulkan.h  vulkan_settings.h
